--- a/templates/index.html
+++ b/templates/index.html
@@ -145,7 +145,6 @@
     </div>
   </div>
 
-
   <!-- SVG END -->
   <div class="container black-text">
     <div class="row" style="margin-top: 32px">
@@ -193,7 +192,6 @@
     </div>
   </div>
 
-
   <div class="section map z-depth-1">
     <div class="container white-text">
       <div class="row" style="margin-top: 32px">
@@ -211,19 +209,21 @@
         <div class="col s12 m3 black-text">
           <div class="card">
             <div class="card-image">
-              <img src="https://media.licdn.com/mpr/mpr/shrinknp_200_200/p/8/000/1ad/2da/203cd14.jpg">
+              <img src="//media.k-space.ee/members/lauri.jpg">
             </div>
             <div class="card-content">
               <div class="card-title">Lauri Võsandi</div>
               <p style="height: 6em; overflow: auto;">Founder of the k-space.
-              <a href="http://www.lpi.org/our-certifications/lpic-3-300-overview">Certified Linux expert</a>. Python developer and systems integrator.</p>
+              <a href="http://www.lpi.org/our-certifications/lpic-3-300-overview">Certified Linux expert</a>, Python developer and systems integrator.
+              See more info at <a href="https://lauri.vosandi.com/" target="_blank">lauri.vosandi.com</a>
+              </p>
             </div>
           </div>
         </div>
         <div class="col s12 m3 black-text">
           <div class="card">
               <div class="card-image">
-                <img src="https://media-exp2.licdn.com/mpr/mpr/shrinknp_200_200/AAEAAQAAAAAAAAetAAAAJDA1ZTNlMTA0LTJlZTEtNGM1NC05YzE3LTI4NDg0MzhmMjE5MQ.jpg"/>
+                <img src="//media.k-space.ee/members/allan.jpg"/>
               </div>
             <div class="card-content">
 
@@ -251,7 +251,7 @@
             </div>
             <div class="card-content">
               <div class="card-title">Priit Laes</div>
-              <p style="height: 6em; overflow: auto;">Embedded Linux systems expert and kernel developer</p>
+              <p style="height: 6em; overflow: auto;">Embedded Linux systems expert and kernel developer. See more info at <a href="http://plaes.org" target="_blank">plaes.org</a></p>
             </div>
           </div>
         </div>
@@ -263,11 +263,71 @@
             </div>
             <div class="card-content">
               <div class="card-title">Silver Kuusik</div>
-              <p style="height: 6em; overflow: auto;">Electronics schematic design & software development. Founder of <a href="http://www.robokoding.com/">Robokoding</a></p>
+              <p style="height: 6em; overflow: auto;">Electronics schematic design & software development. Founder of <a href="http://www.robokoding.com/" target="_blank">Robokoding</a></p>
             </div>
           </div>
         </div>
-        
+
+        <div class="col s12 m3 black-text">
+          <div class="card">
+            <div class="card-image">
+              <img src="//media.k-space.ee/members/mihkel.jpg"/>
+            </div>
+            <div class="card-content">
+              <div class="card-title">Mihkel Raba</div>
+              <p style="height: 6em; overflow: auto;">IT Management, Pentesting, Firewalls, Storage, Linux servers, ESP32 software development</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="col s12 m3 black-text">
+          <div class="card">
+            <div class="card-image">
+              <img src="//media.k-space.ee/members/jaan.jpg"/>
+            </div>
+            <div class="card-content">
+              <div class="card-title">Jaan Jänesmäe</div>
+              <p style="height: 6em; overflow: auto;">3D printing, weekly Chaostreff and drone building</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="col s12 m3 black-text">
+          <div class="card">
+            <div class="card-image">
+              <img src="https://gitlab.pld.ttu.ee/uploads/-/system/user/avatar/74/avatar.png"/>
+            </div>
+            <div class="card-content">
+              <div class="card-title">Aaditya Parashar</div>
+              <p style="height: 6em; overflow: auto;">Web design at <a href="http://www.apdesigns.xyz/">AP designs</a></p>
+            </div>
+          </div>
+        </div>
+
+        <div class="col s12 m3 black-text">
+          <div class="card">
+            <div class="card-image">
+              <img src="//media.k-space.ee/members/arti.jpg"/>
+            </div>
+            <div class="card-content">
+              <div class="card-title">Arti Zirk</div>
+              <p style="height: 6em; overflow: auto;">Random tinkering</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="col s12 m3 black-text">
+          <div class="card">
+            <div class="card-image">
+              <img src="//media.k-space.ee/members/anto.jpg"/>
+            </div>
+            <div class="card-content">
+              <div class="card-title">Anto Veldre</div>
+              <p style="height: 6em; overflow: auto;">That legendary computer security guy</p>
+            </div>
+          </div>
+        </div>
+
         <div class="col s12 m3 black-text">
           <div class="card">
             <div class="card-image">
@@ -286,19 +346,198 @@
               <img src="//media.k-space.ee/minion.jpg"/>
             </div>
             <div class="card-content">
-              <div class="card-title">Jaan Jänesmäe</div>
-              <p style="height: 6em; overflow: auto;">Drone building and 3D printing</p>
+              <div class="card-title">Marju</div>
+              <p style="height: 6em; overflow: auto;">Interested in combining <a href="https://marju.niinemaa.com/">history &amp; computers</a></p>
+            </div>
+          </div>
+        </div>
+
+        <div class="col s12 m3 black-text">
+          <div class="card">
+            <div class="card-image">
+              <img src="//media.k-space.ee/minion.jpg"/>
+            </div>
+            <div class="card-content">
+              <div class="card-title">Karl Hendrik</div>
+              <p style="height: 6em; overflow: auto;">Server hosting & clustering</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="col s12 m3 black-text">
+          <div class="card">
+            <div class="card-image">
+              <img src="//media.k-space.ee/minion.jpg"/>
+            </div>
+            <div class="card-content">
+              <div class="card-title">Marvin</div>
+              <p style="height: 6em; overflow: auto;">Server hosting</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="col s12 m3 black-text">
+          <div class="card">
+            <div class="card-image">
+              <img src="//media.k-space.ee/minion.jpg"/>
+            </div>
+            <div class="card-content">
+              <div class="card-title">Artur</div>
+              <p style="height: 6em; overflow: auto;">Altcoin mining</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="col s12 m3 black-text">
+          <div class="card">
+            <div class="card-image">
+              <img src="//media.k-space.ee/minion.jpg"/>
+            </div>
+            <div class="card-content">
+              <div class="card-title">Arp</div>
+              <p style="height: 6em; overflow: auto;">Drone building & robotics</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="col s12 m3 black-text">
+          <div class="card">
+            <div class="card-image">
+              <img src="//media.k-space.ee/minion.jpg"/>
+            </div>
+            <div class="card-content">
+              <div class="card-title">Endel</div>
+              <p style="height: 6em; overflow: auto;">Tinkering with hobby projects</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="col s12 m3 black-text">
+          <div class="card">
+            <div class="card-image">
+              <img src="//media.k-space.ee/minion.jpg"/>
+            </div>
+            <div class="card-content">
+              <div class="card-title">Jordan</div>
+              <p style="height: 6em; overflow: auto;">Needs a punchline here</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="col s12 m3 black-text">
+          <div class="card">
+            <div class="card-image">
+              <img src="//media.k-space.ee/minion.jpg"/>
+            </div>
+            <div class="card-content">
+              <div class="card-title">Andres</div>
+              <p style="height: 6em; overflow: auto;">Needs a punchline here</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="col s12 m3 black-text">
+          <div class="card">
+            <div class="card-image">
+              <img src="//media.k-space.ee/minion.jpg"/>
+            </div>
+            <div class="card-content">
+              <div class="card-title">Frank</div>
+              <p style="height: 6em; overflow: auto;">That space probe guy</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="col s12 m3 black-text">
+          <div class="card">
+            <div class="card-image">
+              <img src="//media.k-space.ee/minion.jpg"/>
+            </div>
+            <div class="card-content">
+              <div class="card-title">Kristjan</div>
+              <p style="height: 6em; overflow: auto;">Veteran sysadmin & high availability expert</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="col s12 m3 black-text">
+          <div class="card">
+            <div class="card-image">
+              <img src="//media.k-space.ee/minions.jpg"/>
+            </div>
+            <div class="card-content">
+              <div class="card-title">Valdur & Kristjan</div>
+              <p style="height: 6em; overflow: auto;">Honorary members. Robotics & CNC experts. See more at <a href="http://wiseparker.com/">wiseparker.com</a></p>
+            </div>
+          </div>
+        </div>
+
+        <div class="col s12 m3 black-text">
+          <div class="card">
+            <div class="card-image">
+              <img src="//media.k-space.ee/minions.jpg"/>
+            </div>
+            <div class="card-content">
+              <div class="card-title">Raul & Janno</div>
+              <p style="height: 6em; overflow: auto;">Honorary members. Team Dozer. CUDA programming experts.</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="col s12 m3 black-text">
+          <div class="card">
+            <div class="card-image">
+              <img src="//media.k-space.ee/minions.jpg"/>
+            </div>
+            <div class="card-content">
+              <div class="card-title">Erik & Indrek</div>
+              <p style="height: 6em; overflow: auto;">Honorary members. Team Neve.</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="col s12 m3 black-text">
+          <div class="card">
+            <div class="card-image">
+              <img src="//media.k-space.ee/professor.jpg"/>
+            </div>
+            <div class="card-content">
+              <div class="card-title">Truls</div>
+              <p style="height: 6em; overflow: auto;">Honorary member. Cisco networking expert.</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="col s12 m3 black-text">
+          <div class="card">
+            <div class="card-image">
+              <img src="//media.k-space.ee/professor.jpg"/>
+            </div>
+            <div class="card-content">
+              <div class="card-title">Fred</div>
+              <p style="height: 6em; overflow: auto;">Honorary member. That algorithm sorcery and Python guy</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="col s12 m3 black-text">
+          <div class="card">
+            <div class="card-image">
+              <img src="//media.k-space.ee/professor.jpg"/>
+            </div>
+            <div class="card-content">
+              <div class="card-title">Mohanad</div>
+              <p style="height: 6em; overflow: auto;">Honorary member. The captain.</p>
             </div>
           </div>
         </div>
 
       </div>
 
-
       <p>Interested in joining the core team? Give Lauri a call and schedule for a visit.</p>
     </div>
   </div>
-  
+
   <div class="container black-text">
     <div class="row" style="margin-top: 32px">
       <div class="col s12">
@@ -310,9 +549,9 @@
       <div class="col s12 m6">
         <p>In addition to the regular and not so regular events on the right we're in talks about hosting following as well:</p>
         <ul class="browser-default">
-          <li>Laphack</li>
           <li>Python CodeClub</li>
-          <li>Cryptocurrency interest groups</li>
+          <li><a href="https://www.meetup.com/TallinnSec/">TallinnSec Meetup</a></li>
+          <li><a href="https://www.facebook.com/events/203931076859994/">Cryptoparty</a></li>
           <li>Robotex prep arena</li>
         </ul>
       </div>
@@ -341,18 +580,21 @@
         <li>As a bonus we also have a server room so you can get your machine up and online in no time</li>
       </ul>
     </div>
-    
-    
+
     <div class="row">
         <div class="col s12 m4">
           <div class="card">
             <div class="card-content">
-              <span class="card-title" style="font-family: 'Orbitron', cursive; font-size:200%;">Newbie</span>
+              <span class="card-title" style="font-family: 'Orbitron', cursive; font-size:200%;">Supporter</span>
               <p>Beginner package the get you started at our hackerspace</p>
               <ul class="browser-default">
                 <li>Access to rooms 24/7</li>
                 <li>Locker for personal belongings</li>
                 <li>Access to common equipment</li>
+                <li>Access to coffee machine</li>
+                <li>Use any free desk space available</li>
+                <li><a href="https://nextcloud.k-space.ee">10TB+ Nextcloud instance</a></li>
+                <li>Host your workshops/trainings at our lab</li>
               </ul>
               <p style="text-align:right; font-size:200%;font-family: 'Orbitron', cursive;">29€/month</p>
             </div>
@@ -362,12 +604,12 @@
         <div class="col s12 m4">
           <div class="card">
             <div class="card-content">
-              <span class="card-title" style="font-family: 'Orbitron', cursive; font-size:200%;">Resident</span>
+              <span class="card-title" style="font-family: 'Orbitron', cursive; font-size:200%;">Member</span>
               <p>In addition to the stuff on the left you get following for your freelance work or hobby projects:</p>
               <ul class="browser-default">
-                <li>Personal desk</li>
-                <li>Personal shelf</li>
-                <li>Space in the server room</li>
+                <li>Slightly more permanent desk setup and a cupboard</li>
+                <li>Couple units of rack space in the server room</li>
+                <li>Couple public IPv4 addresses for your projects</li>
               </ul>
               <p style="text-align:right; font-size:200%;font-family: 'Orbitron', cursive;">59€/month</p>
             </div>
@@ -377,25 +619,19 @@
         <div class="col s12 m4">
           <div class="card">
             <div class="card-content">
-              <span class="card-title" style="font-family: 'Orbitron', cursive; font-size:200%;">Office space</span>
+              <span class="card-title" style="font-family: 'Orbitron', cursive; font-size:200%;">Resident</span>
               <p>In addition to the stuff on the left you get:</p>
               <ul class="browser-default">
-                <li>Dedicated section of the hackerspace for your activities</li>
+                <li>Permanent desk and equipment setup</li>
               </ul>
               <p style="text-align:right; font-size:200%;font-family: 'Orbitron', cursive;">99€/month</p>
             </div>
 
           </div>
         </div>
-        
-
 
     </div>
   </div>
-
-
-
-
 
   <div class="gallery" style="height:400px;">
 
@@ -410,10 +646,8 @@
     ><img src="//media.k-space.ee/basketball-robots.jpg"/
     >
 
-
   </div>
 
-  
   <div class="container black-text">
     <div class="row" style="margin-top: 32px">
       <div class="col s12">
@@ -434,13 +668,12 @@
       </p>
     </div>
   </div>
-  
+
   <div style="position:relative;">
     <video loop autoplay width="100%">
       <source src="https://media.k-space.ee/zoidberg-football.mp4" type="video/mp4">
     </video>
   </div>
-
 
   <div class="container black-text">
     <div class="row" style="margin-top: 32px">
@@ -461,9 +694,7 @@
         <li>Corporate visibility at international robotics competiton Robotex. Our hackerspace members have participated repeatedly at the Robotex in the past. In 2018 we're planning to participate in the basketball robots and ICD grand challenge categories.</li>
       </ul>
 
-
       <p>Contact Lauri via e-mail address below for more information</p>
-
 
     </div>
   </div>
